--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=0.1, maximum-scale=4,user-scalable=yes">
 <!-- quaggaJSの読み込み -->
+  
 <script src="./quagga.min.js"></script>
+  
 <script>
 var DetectedCount=0,DetectedCode="";
 var video,tmp,tmp_ctx,jan,prev,prev_ctx,w,h,mw,mh,x1,y1;
@@ -94,6 +96,17 @@ window.addEventListener('load',function(event){
       DetectedCode='';
       DetectedCount=0;
     }
+            //カメラ停止
+        //video stop
+        let mediastream = this.video.srcObject;
+        let tracks = mediastream.getTracks();
+        
+        tracks.forEach(function(track) {
+           //mediastream.removeTrack(track);
+           track.stop();
+        });
+        this.video.srcObject=null;
+        this.blnCameraInit==false
   });
 });
 </script>
