--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
 
         <div id="photo-area" class="viewport"></div>
 
-        <script src="js/jquery-3.4.1.min.js" type="text/javascript"></script>
+        <script src="jquery-3.4.1.min.js" type="text/javascript"></script>
 
-        <script src="js/quagga.min.js" type="text/javascript"></script>
+        <script src="quagga.min.js" type="text/javascript"></script>
 
-        <script src="js/test.js" type="text/javascript"></script>
+        <script src="test.js" type="text/javascript"></script>
 
     </body>
 
