--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
     <head>
 
-        <link rel="stylesheet" href="css/test.css" />
+        <link rel="stylesheet" href="test.css" />
 
     </head>
 
