--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
     <head>
 
-        <link rel="stylesheet" href="test.css" />
+        <link rel="stylesheet" href="./test.css" />
 
     </head>
 
@@ -14,9 +14,9 @@
 
         <script src="jquery-3.4.1.min.js" type="text/javascript"></script>
 
-        <script src="quagga.min.js" type="text/javascript"></script>
+        <script src="./quagga.min.js" type="text/javascript"></script>
 
-        <script src="test.js" type="text/javascript"></script>
+        <script src="./test.js" type="text/javascript"></script>
 
     </body>
 
